# Xerxes

./: .clang-format  .gitignore  CMakeLists.txt  compile_commands.json
CMake/: FindGLIB2.cmake  FindGStreamer.cmake
Data/: spec.bs
Extras/plan/: 2-6-2026.md
Include/Core/Logging/: Logger.hpp
Include/Core/Utilities/: Common.hpp  IgnoreResult.hpp  ScopeExit.hpp
Include/Core/Window/: Window.hpp
Include/Runtime/Vulkan/: VulkanApplication.hpp  VulkanCommon.hpp  VulkanCore.hpp  VulkanPhysicalDevice.hpp
Include/Runtime/launch/: Launch.hpp
Source/: main.cpp
Source/Core/Logging/: Logger.cpp
Source/Core/Surface/: surface.cpp
Source/Core/Utilities/: IgnoreResult.cpp  ScopeExit.cpp
Source/Core/Window/: Window.cpp
Source/Runtime/Renderer/: Renderer.cpp
Source/Runtime/Vulkan/: VulkanApplication.cpp  VulkanCommon.cpp  VulkanCore.cpp  VulkanPhysicalDevice.cpp
Source/Runtime/launch/windows/: LaunchWindows.cpp
Tools/: .clang-format
Tools/pitchfork/: pf
Tools/toolchain/: x86_64-w64-mingw32.cmake
include/core/: scope_exit.h
include/core/surface/: surface.hpp
include/core/utilities/: scope_exit.hpp
include/core/window/: window.hpp
include/runtime/launch/: launch.hpp
src/: main.cpp
src/core/: scope_exit.cpp
src/core/utilities/: scope_exit.cpp
src/core/window/: window.cpp
src/runtime/launch/windows/: launch_windows.cpp
